# evo2-mag

./: CLAUDE.md  README.md  pyproject.toml  서버-세팅-진행log.md
notes/: CLAUDE.md  Phase3c-v2-키메라-탐지-개선계획.md  Step1-CAMI2-벤치마크-실행가이드.md  서버-세팅-진행log.md
notes/scripts/: run_mmlong2_parallel.sh
scripts/: after_embed.sh  chimera_combine.py  chimera_embedding_dist.py  chimera_junction.py  make_gold_standard.sh  run_amber.sh  run_amber_v1_1.sh  run_amber_v2.sh  run_amber_v2_1.sh  run_amber_v3.sh  run_amber_v4.sh  run_amber_v4_1.sh  run_bakta_enhanced.sh  run_binette_enhanced.sh  run_binette_enhanced_v1_1.sh  run_binette_enhanced_v2.sh  run_binette_enhanced_v2_1.sh  run_binette_enhanced_v3.sh  run_binette_enhanced_v4.sh  run_binette_enhanced_v4_1.sh  run_checkm2_enhanced.sh  run_checkm2_enhanced_v1_1.sh  run_checkm2_enhanced_v2.sh  run_checkm2_enhanced_v2_1.sh  run_checkm2_enhanced_v3.sh  run_checkm2_enhanced_v4.sh  run_checkm2_enhanced_v4_1.sh  run_cluster.py  run_cluster_v2.py  run_cluster_v2_cov.py  run_embed.py  run_embed_dnaberts.py  run_perplexity.py  runpod_setup.sh  validate_chimera.py
